added the Services section with its different icons

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
+
+    <!-- Banner section with navigation menu -->
     <section class="banner">
       <nav>
         <div class="company">
-          <img src="./resources/images/glasses-bg.pgn" alt="Company Logo">
+          <img src="./resources/images/logo-white.png" alt="Company Logo">
           <h3>Tortoiseshell Optics</h3>
         </div>
         <div class="navigation">
@@ -23,6 +25,34 @@
         <h1>don't just look, see.</h1>
       </div>
 
+    </section>
+
+    <!-- Services Area with icons -->
+    <section class="services">
+      <div class="item">
+        <div class="icon">
+          <img src="./resources/images/paper-icon.png" alt="Paper icon">
+        </div>
+        <div class="description">
+          <h3>Comprehensive Exams</h3>
+        </div>
+      </div>
+      <div class="item">
+        <div class="icon">
+          <img src="./resources/images/ruler-icon.png" alt="Ruler icon">
+        </div>
+        <div class="description">
+          <h3>Custom Fittings</h3>
+        </div>
+      </div>
+      <div class="item">
+        <div class="icon">
+          <img src="./resources/images/truck-icon.png" alt="Truck icon">
+        </div>
+        <div class="description">
+          <h3>Fast Delivery</h3>
+        </div>
+      </div>
     </section>
 
   </body>
