--- a/index.html
+++ b/index.html
@@ -55,5 +55,22 @@
       </div>
     </section>
 
+    <!-- Information Section with Philosophy -->
+    <section class="information">
+      <div class="infobox">
+        <h2>Philosophy</h2>
+        <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, n ot matter what. That's why we offer eye exams, custom  fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
+      </div>
+      <div class="infobox">
+        <h2>Appointments</h2>
+        <p>Schedule an appoitment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <img src="./resources/images/logo-white.png" alt="Company Logo">
+      <h3>Copyright Tortoiseshell Optics</h3>
+    </footer>
   </body>
 </html>
