--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
           <span>Contact</span>
         </div>
       </nav>
-      <div class="title">
-        <h1>don't just look, see.</h1>
+      <div class="title-box">
+        <div class="title">
+          <h1>don't just look, see.</h1>
+        </div>
       </div>
-
     </section>
 
     <!-- Services Area with icons -->
