stylized the icons and description on the services section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="services">
       <div class="item">
         <div class="icon">
-          <img src="./resources/images/paper-icon.png" alt="Paper icon">
+          <img src="./resources/images/paper-icon.png" alt="Paper icon" class="paper">
         </div>
         <div class="description">
           <h3>Comprehensive Exams</h3>
@@ -40,7 +40,7 @@
       </div>
       <div class="item">
         <div class="icon">
-          <img src="./resources/images/ruler-icon.png" alt="Ruler icon">
+          <img src="./resources/images/ruler-icon.png" alt="Ruler icon" class="ruler">
         </div>
         <div class="description">
           <h3>Custom Fittings</h3>
@@ -48,7 +48,7 @@
       </div>
       <div class="item">
         <div class="icon">
-          <img src="./resources/images/truck-icon.png" alt="Truck icon">
+          <img src="./resources/images/truck-icon.png" alt="Truck icon" class="truck">
         </div>
         <div class="description">
           <h3>Fast Delivery</h3>
