--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <span>Services</span>
           <span>Products</span>
           <span>Contact</span>
+          <span id="menu">Menu</span>
         </div>
       </nav>
       <div class="title-box">
