added the configuration for the services and information section for the mobie media query

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>Comprehensive Exams</h3>
         </div>
       </div>
-      <div class="item">
+      <div class="item rulerbox">
         <div class="icon">
           <img src="./resources/images/ruler-icon.png" alt="Ruler icon" class="ruler">
         </div>
